--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,9 +149,12 @@ input, textarea, select, .uneditable-input {
   border: 1px solit #bbb;
   width: 100%;
   padding: 10px;
-  height: auto;
   margin-bottom: 15px;
   @include box_sizing;
+}
+
+input {
+  height: auto !important;
 }
 
 #error_explanation {
