--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org">Ruby on Rails</a>
+    <a href="http://railstutorial.org">Ruby on Rails Sample</a>
     by George Sun
   </small>
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://railstutorial.org/">News</li>
+      <li><a href="http://puffsun.iteye.com/">News</li>
     </ul>
   </nav>
 </footer>
