--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,5 +1,4 @@
 
-<%= render 'shared/error_messages' %>
 <%= f.label :name %>
 <%= f.text_field :name %>
 
@@ -7,7 +6,7 @@
 <%= f.text_field :email %>
 
 <%= f.label :password %>
-<%= f.text_field :password %>
+<%= f.password_field :password %>
 
 <%= f.label :password_confirmation, "Confirm Password" %>
 <%= f.password_field :password_confirmation %>
