include new file, add user nickname.

--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -5,6 +5,9 @@
 <%= f.label :email %>
 <%= f.text_field :email %>
 
+<%= f.label :nickname %>
+<%= f.text_field :nickname %>
+
 <%= f.label :password %>
 <%= f.password_field :password %>
 
