--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -2,7 +2,7 @@
 <li id="<%= feed_item.id %>">
   <%= link_to gravatar_for(feed_item.user), feed_item.user %>
   <span class="user">
-    <%= link_to feed_item.user.name, feed_item.user %>
+    <%= link_to feed_item.user.nickname, feed_item.user %>
   </span>
     <%= render "shared/single_micropost", post: feed_item %>
   </li>
