add email notification for new follower.

--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -5,6 +5,9 @@
 <%= f.label :email %>
 <%= f.text_field :email %>
 
+<%= f.label :notify, "Receive email notify for new follower?" %>
+<%= f.check_box :notify %>
+
 <%= f.label :nickname %>
 <%= f.text_field :nickname %>
 
